added UI for mobile fixed redirect uri

--- a/src/components/playlist/playlist.css
+++ b/src/components/playlist/playlist.css
@@ -6,6 +6,7 @@
     opacity: 0.8;
 }
 
+
 .playlist-name {
 
     border-bottom: 1px solid white;
@@ -28,6 +29,11 @@
     border: none;
 }
 
+.playlist-tracks {
+    max-height: 500px;
+    overflow: hidden scroll;
+}
+
 .submit button {
 
     background-color: rgb(149, 106, 228);
@@ -44,4 +50,12 @@
 
     background-color: rgb(86, 34, 86);
     transition: color 300ms linear;
+}
+
+@media (max-width: 767px) {
+  
+    .playlist-tracks {
+        max-height: 400px;
+        overflow: hidden scroll;
+    }
 }
