--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -58,11 +58,21 @@ header h1 {
   pointer-events: none;
 }
 
+@media (max-width: 767px) {
+  
+  .songs {
+
+    display: contents;
+
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
