--- a/src/components/searchresults/searchresults.css
+++ b/src/components/searchresults/searchresults.css
@@ -4,6 +4,8 @@
     margin: 3rem;
     border-radius: 1rem;
     opacity: 0.8;
+    max-height: 700px;
+    overflow: hidden scroll;
 }
 
 .song {
@@ -13,4 +15,12 @@
     opacity: 1;
     margin-left: 1rem;
     margin-right: 1rem;
+}
+
+@media (max-width: 767px) {
+  
+    .searchresults {
+
+        max-height: 600px;
+    }
 }
